Workaround for "textarea being too wide on mobile" bug

--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -831,6 +831,7 @@ a {
   textarea {
     resize: vertical;
     height: 130px;
+    width: 100%;
   }
 
   &__buttons {
@@ -1087,6 +1088,10 @@ a {
   width: 960px;
   box-shadow: inset 0 0 0 1px @main-color, 2px 2px 10px rgba(0,0,0, 0.5);
   position: absolute;
+}
+
+.textarea-wrapper {
+  flex: 1 0 0%;
 }
 
 
